--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,15 +3,17 @@
   "compilerOptions": {
     "strict": true,
     "paths": {
-      "@/*": [
-        "./*"
-      ]
+      "@/*": ["./*"]
     }
   },
   "include": [
     "**/*.ts",
     "**/*.tsx",
     ".expo/types/**/*.ts",
-    "expo-env.d.ts"
+    "expo-env.d.ts",
+    "app/onboarding/Onboarding.jsx",
+    "app/onboarding/Onboarding.jsx",
+    "app/onboarding/Paginator.jsx",
+    "app/index.jsx"
   ]
 }
