--- a/package.json
+++ b/package.json
@@ -5,22 +5,27 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "start-tunnel": "expo start --tunnel"
   },
   "jest": {
     "preset": "jest-expo"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-google-signin/google-signin": "^13.2.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/drawer": "^7.2.1",
     "@react-navigation/native": "^7.0.14",
+    "@react-navigation/stack": "^7.2.10",
     "axios": "^1.8.4",
     "expo": "~52.0.23",
+    "expo-auth-session": "~6.0.3",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.2",
@@ -31,11 +36,13 @@
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.6",
-    "expo-web-browser": "~14.0.1",
-    "firebase": "^11.5.0",
+    "expo-web-browser": "~14.0.2",
+    "firebase": "^11.6.0",
+    "is-arrayish": "^0.3.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
+    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "~3.16.1",
@@ -54,7 +61,7 @@
     "jest": "^29.2.1",
     "jest-expo": "~52.0.2",
     "react-test-renderer": "18.3.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.8.2"
   },
   "private": true
 }
