--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,14 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
+    "module": "esnext", // ✅ hoặc "commonjs", "es2022", v.v.
+    "target": "esnext",
+    "jsx": "react-native", // Nếu dùng React Native
+    "moduleResolution": "node",
+    "allowJs": true,
+    "lib": ["esnext"],
     "strict": true,
+    "esModuleInterop": true,
     "paths": {
       "@/*": ["./*"]
     }
@@ -11,7 +18,6 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts",
-    "app/onboarding/Onboarding.jsx",
     "app/onboarding/Onboarding.jsx",
     "app/onboarding/Paginator.jsx",
     "app/index.jsx"
