--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "axios": "^1.8.4",
     "expo": "~52.0.23",
     "expo-auth-session": "~6.0.3",
+    "expo-av": "~15.0.2",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.2",
     "expo-haptics": "~14.0.0",
     "expo-linking": "~7.0.5",
+    "expo-notifications": "~0.29.14",
     "expo-router": "~4.0.15",
     "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
@@ -40,6 +42,7 @@
     "expo-web-browser": "~14.0.2",
     "firebase": "^11.6.0",
     "is-arrayish": "^0.3.2",
+    "lodash": "^4.17.21",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
