--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "expo-haptics": "~14.0.0",
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.15",
+    "expo-speech": "~13.0.1",
     "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
@@ -46,7 +47,7 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
+    "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
